Add java 19 and made some refactor